Fixed an issue where the fixed footer was cutting off the bottom part of the page.

--- a/WebContent/css/socialme.css
+++ b/WebContent/css/socialme.css
@@ -22,6 +22,8 @@
     color: white;
 }
 
+#body { padding-bottom: 80px; }
+
 .profile-pic-small {
 	max-height:40px;
 	padding-right:5px;
